--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ img {
   vertical-align: top;
 }
 
-dialog {
+dialog[open] {
   outline: none;
   position: fixed;
   inset: 0;
@@ -152,14 +152,14 @@ dialog {
   display: flex;
   background-color: transparent;
 }
-dialog::-ms-backdrop {
+dialog[open]::-ms-backdrop {
   display: -ms-flexbox;
   display: flex;
   background-color: rgba(0, 0, 0, 0.9);
   cursor: pointer;
   overflow: hidden;
 }
-dialog::backdrop {
+dialog[open]::backdrop {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -383,73 +383,6 @@ textarea {
 .intro__block {
   background-color: #f2f2f2;
   position: relative;
-}
-
-.slider {
-  overflow: hidden;
-}
-
-.slider__item,
-.slick-list,
-.slick-track {
-  height: 100%;
-}
-
-.slider__img {
-  width: 100%; /* Изображение занимает 100% ширины слайда */
-  height: 100%; /* Изображение занимает 100% высоты слайда */
-  -o-object-fit: cover;
-     object-fit: cover; /* Обеспечивает корректное обрезание изображений */
-}
-
-.slick-arrow {
-  width: 100px;
-  height: 100px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  position: absolute;
-  z-index: 1;
-  background-color: rgba(158, 146, 158, 0.7);
-  border-radius: 50%;
-}
-.slick-arrow:active {
-  scale: 0.95;
-}
-.slick-arrow:hover, .slick-arrow:focus {
-  background-color: rgba(158, 146, 158, 0.7);
-}
-
-.slick-arrow::before {
-  content: "";
-  background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 55.75"%3E%3Cpath fill="white" d="M3.11 55.75c0,0 -0.01,0 -0.01,0 -0.82,0 -1.6,-0.32 -2.18,-0.9 -0.59,-0.58 -0.92,-1.37 -0.92,-2.2 0,-0.82 0.33,-1.61 0.92,-2.2l22.6 -22.57 -22.6 -22.57c-0.59,-0.58 -0.91,-1.38 -0.91,-2.2 0,-1.72 1.39,-3.11 3.11,-3.11 0.82,0 1.61,0.33 2.19,0.91l24.78 24.77c0.58,0.58 0.91,1.38 0.91,2.2 0,0.83 -0.33,1.62 -0.92,2.2l-24.77 24.77c-0.58,0.58 -1.36,0.9 -2.18,0.9 0,0 -0.01,0 -0.01,0l-0.01 0z" /%3E%3C/svg%3E') no-repeat center;
-  position: absolute;
-  left: 25px;
-  display: block;
-  width: 60px;
-  height: 60px;
-}
-
-.slick-prev {
-  left: 10px;
-  top: 50%;
-  -webkit-transform: translateY(-50%) scaleX(-1);
-      -ms-transform: translateY(-50%) scaleX(-1);
-          transform: translateY(-50%) scaleX(-1);
-}
-
-.slick-next {
-  right: 10px;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
 }
 
 .services {
@@ -812,8 +745,77 @@ textarea {
   opacity: 1;
 }
 
+.slider-intro {
+  overflow: hidden;
+}
+
+.slider-intro .slider__item,
+.slider-intro .slick-list,
+.slider-intro .slick-track {
+  height: 100%;
+}
+
+.slider-intro .slider__img {
+  width: 100%; /* Изображение занимает 100% ширины слайда */
+  height: 100%; /* Изображение занимает 100% высоты слайда */
+  -o-object-fit: cover;
+     object-fit: cover; /* Обеспечивает корректное обрезание изображений */
+}
+
+.slider-intro .slick-arrow {
+  width: 100px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(158, 146, 158, 0.7);
+  border-radius: 50%;
+}
+.slider-intro .slick-arrow:active {
+  scale: 0.95;
+}
+.slider-intro .slick-arrow:hover, .slider-intro .slick-arrow:focus {
+  background-color: rgba(158, 146, 158, 0.7);
+}
+
+.slider-intro .slick-arrow::before {
+  content: "";
+  background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 55.75"%3E%3Cpath fill="white" d="M3.11 55.75c0,0 -0.01,0 -0.01,0 -0.82,0 -1.6,-0.32 -2.18,-0.9 -0.59,-0.58 -0.92,-1.37 -0.92,-2.2 0,-0.82 0.33,-1.61 0.92,-2.2l22.6 -22.57 -22.6 -22.57c-0.59,-0.58 -0.91,-1.38 -0.91,-2.2 0,-1.72 1.39,-3.11 3.11,-3.11 0.82,0 1.61,0.33 2.19,0.91l24.78 24.77c0.58,0.58 0.91,1.38 0.91,2.2 0,0.83 -0.33,1.62 -0.92,2.2l-24.77 24.77c-0.58,0.58 -1.36,0.9 -2.18,0.9 0,0 -0.01,0 -0.01,0l-0.01 0z" /%3E%3C/svg%3E') no-repeat center;
+  position: absolute;
+  left: 25px;
+  display: block;
+  width: 60px;
+  height: 60px;
+}
+
+.slider-intro .slick-prev {
+  left: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%) scaleX(-1);
+      -ms-transform: translateY(-50%) scaleX(-1);
+          transform: translateY(-50%) scaleX(-1);
+}
+
+.slider-intro .slick-next {
+  right: 10px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+}
+
 #modal-close {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   position: fixed;
   top: 50px;
   left: 50%;
@@ -855,7 +857,9 @@ textarea {
 }
 
 #modal-controls {
-  display: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -867,24 +871,8 @@ textarea {
   top: 0;
 }
 
-#prevImg,
-#nextImg {
-  border: none;
-  cursor: pointer;
-  background-color: transparent;
+#modal-content {
+  width: 100%;
   height: 100%;
-  width: 50px;
-  color: white;
-  font-size: 30px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-#prevImg:active, #prevImg:focus,
-#nextImg:active,
-#nextImg:focus {
-  outline: none;
-}
-#prevImg:hover,
-#nextImg:hover {
-  background-color: rgba(54, 72, 235, 0.2);
+  background-color: red;
 }/*# sourceMappingURL=main.css.map */
