--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -1,5 +1,5 @@
 #modal-close {
-    display: none;
+    display: flex;
 	position: fixed;
 	top: 50px;
     left: 50%;
@@ -31,7 +31,7 @@ justify-content: center;
 }
 
 #modal-controls {
-    display: none;
+    display: flex;
 	justify-content: space-between;
     position: fixed;
     z-index: 1;
@@ -41,23 +41,10 @@ justify-content: center;
     top: 0;
 }
 
-#prevImg,
-#nextImg{
 
-    border: none;
-    cursor: pointer;
-    background-color: transparent;
-    height: 100%;
-width: 50px;
-color: white;
-font-size: 30px;
-transition: .3s;
 
-&:active,
-&:focus{
-    outline: none;
-}
-&:hover{
-    background-color: rgba($color: #3648eb6f, $alpha: 0.2);
-}
+#modal-content{
+    width: 100%;
+    height:100%;
+    background-color: red;
 }
