--- a/css/main.css
+++ b/css/main.css
@@ -506,7 +506,7 @@ textarea {
 
 .photo-img {
   width: 100%;
-  aspect-ratio: 2/2;
+  aspect-ratio: 1/1;
   vertical-align: top;
   -o-object-fit: cover;
      object-fit: cover;
@@ -745,24 +745,40 @@ textarea {
   opacity: 1;
 }
 
-.slider-intro {
+.slider-intro,
+.slider-modal {
   overflow: hidden;
 }
 
-.slider-intro .slider__item,
-.slider-intro .slick-list,
-.slider-intro .slick-track {
+.slider__item,
+.slick-list,
+.slick-track {
   height: 100%;
 }
 
 .slider-intro .slider__img {
-  width: 100%; /* Изображение занимает 100% ширины слайда */
-  height: 100%; /* Изображение занимает 100% высоты слайда */
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover; /* Обеспечивает корректное обрезание изображений */
 }
 
-.slider-intro .slick-arrow {
+.slider-modal .slider__img {
+  max-width: 100%;
+  max-height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  border-radius: 10px;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  color: #800080;
+}
+
+.slick-arrow {
   width: 100px;
   height: 100px;
   display: -webkit-box;
@@ -779,24 +795,28 @@ textarea {
   background-color: rgba(158, 146, 158, 0.7);
   border-radius: 50%;
 }
-.slider-intro .slick-arrow:active {
+.slick-arrow:active {
   scale: 0.95;
 }
-.slider-intro .slick-arrow:hover, .slider-intro .slick-arrow:focus {
+.slick-arrow:hover, .slick-arrow:focus {
   background-color: rgba(158, 146, 158, 0.7);
 }
 
-.slider-intro .slick-arrow::before {
+.slider-modal .slick-arrow {
+  background-color: rgba(158, 146, 158, 0.1);
+}
+
+.slick-arrow::before {
   content: "";
   background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 55.75"%3E%3Cpath fill="white" d="M3.11 55.75c0,0 -0.01,0 -0.01,0 -0.82,0 -1.6,-0.32 -2.18,-0.9 -0.59,-0.58 -0.92,-1.37 -0.92,-2.2 0,-0.82 0.33,-1.61 0.92,-2.2l22.6 -22.57 -22.6 -22.57c-0.59,-0.58 -0.91,-1.38 -0.91,-2.2 0,-1.72 1.39,-3.11 3.11,-3.11 0.82,0 1.61,0.33 2.19,0.91l24.78 24.77c0.58,0.58 0.91,1.38 0.91,2.2 0,0.83 -0.33,1.62 -0.92,2.2l-24.77 24.77c-0.58,0.58 -1.36,0.9 -2.18,0.9 0,0 -0.01,0 -0.01,0l-0.01 0z" /%3E%3C/svg%3E') no-repeat center;
   position: absolute;
-  left: 25px;
+  left: 23px;
   display: block;
   width: 60px;
   height: 60px;
 }
 
-.slider-intro .slick-prev {
+.slick-prev {
   left: 10px;
   top: 50%;
   -webkit-transform: translateY(-50%) scaleX(-1);
@@ -804,7 +824,7 @@ textarea {
           transform: translateY(-50%) scaleX(-1);
 }
 
-.slider-intro .slick-next {
+.slick-next {
   right: 10px;
   top: 50%;
   -webkit-transform: translateY(-50%);
@@ -817,11 +837,8 @@ textarea {
   display: -ms-flexbox;
   display: flex;
   position: fixed;
-  top: 50px;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
+  top: 20px;
+  right: 20px;
   font-size: 35px;
   width: 30px;
   height: 30px;
@@ -840,39 +857,13 @@ textarea {
   background-color: #fff;
 }
 #modal-close:hover {
-  -webkit-transform: translateX(-50%) rotate(180deg);
-      -ms-transform: translateX(-50%) rotate(180deg);
-          transform: translateX(-50%) rotate(180deg);
-}
-
-#modal-image {
-  width: 100%;
-  max-width: 1000px;
-  max-height: 50%;
-  height: auto;
-  -o-object-fit: contain;
-     object-fit: contain;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-
-#modal-controls {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  top: 0;
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 #modal-content {
-  width: 100%;
-  height: 100%;
-  background-color: red;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: transparent;
 }/*# sourceMappingURL=main.css.map */
