--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -7,8 +7,8 @@
 
 	&__inner {
 		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		gap: 30px;
+		grid-template-columns: repeat(2, 1fr);
+		gap: 50px;
 	}
 	&__block {
 		display: flex;
@@ -17,6 +17,10 @@
 	&__title {
 		margin-bottom: 30px;
 		color: #fff;
+
+		font-family: 'RobotoSlab-Bold',sans-serif;
+		font-weight: 700;
+		font-size: 20px;
 
 		&_logo {
 			text-transform: uppercase;
@@ -80,72 +84,72 @@ transition: .3s;
 	}
 }
 
-.book {
-	&__lbl {
-		position: relative;
-		width: 100%;
-		color: $color-dark;
-		font-size: 20px;
-		&_textarea {
-			margin-bottom: 30px;
-		}
-	}
+// .book {
+// 	&__lbl {
+// 		position: relative;
+// 		width: 100%;
+// 		color: $color-dark;
+// 		font-size: 20px;
+// 		&_textarea {
+// 			margin-bottom: 30px;
+// 		}
+// 	}
 
-	&__input {
-		width: 100%;
-		color: inherit;
-		margin-bottom: 5px;
-		border-radius: 5px;
-		font-size: inherit;
-	}
+// 	&__input {
+// 		width: 100%;
+// 		color: inherit;
+// 		margin-bottom: 5px;
+// 		border-radius: 5px;
+// 		font-size: inherit;
+// 	}
 
-	&__span {
-		position: absolute;
-		top: 10px;
-		right: 10px;
-		width: 5px;
-		height: 5px;
-		font-size: 20px;
-		color: $color-pink;
-	}
+// 	&__span {
+// 		position: absolute;
+// 		top: 10px;
+// 		right: 10px;
+// 		width: 5px;
+// 		height: 5px;
+// 		font-size: 20px;
+// 		color: $color-pink;
+// 	}
 
-	&__textarea {
-		color: inherit;
-		width: 100%;
-		height: 100%;
-		border-radius: 5px;
-		font-size: inherit;
-		font-family: inherit;
-	}
+// 	&__textarea {
+// 		color: inherit;
+// 		width: 100%;
+// 		height: 100%;
+// 		border-radius: 5px;
+// 		font-size: inherit;
+// 		font-family: inherit;
+// 	}
 
-	&__btn {
-		align-self: flex-start;
-		background-color: $color-pink;
-		border-radius: 5px;
-		padding: 15px 30px;
-		text-transform: uppercase;
-		color: #fff;
-		position: relative;
+// 	&__btn {
+// 		align-self: flex-start;
+// 		background-color: $color-pink;
+// 		border-radius: 5px;
+// 		padding: 15px 30px;
+// 		text-transform: uppercase;
+// 		color: #fff;
+// 		position: relative;
 
-		&::after {
-			opacity: 0;
-			display: block;
-			content: "";
-			width: calc(100% + 2px);
-			height: calc(100% + 2px);
-			position: absolute;
-			left: -1px;
-			top: -1px;
-			border: 3px solid black;
-			border-radius: 5px;
-			transition: 0.3s;
-		}
-		&:hover {
-			color: black;
-			background-color: $color-white;
-			&::after {
-				opacity: 1;
-			}
-		}
-	}
-}
+// 		&::after {
+// 			opacity: 0;
+// 			display: block;
+// 			content: "";
+// 			width: calc(100% + 2px);
+// 			height: calc(100% + 2px);
+// 			position: absolute;
+// 			left: -1px;
+// 			top: -1px;
+// 			border: 3px solid black;
+// 			border-radius: 5px;
+// 			transition: 0.3s;
+// 		}
+// 		&:hover {
+// 			color: black;
+// 			background-color: $color-white;
+// 			&::after {
+// 				opacity: 1;
+// 			}
+// 		}
+// 	}
+// }
