--- a/css/main.css
+++ b/css/main.css
@@ -17,72 +17,30 @@
 }
 
 @font-face {
-  font-family: "Helvetica-Bold";
-  src: url("../fonts/Helvetica-Bold.woff2") format("woff2"), url("../fonts/Helvetica-Bold.woff") format("woff"), url("../fonts/Helvetica-Bold.ttf") format("truetype");
+  font-family: "HelveticaNeue-Bold";
+  src: url("../fonts/HelveticaNeue-Bold.woff2") format("woff2"), url("../fonts/HelveticaNeue-Bold.woff") format("woff"), url("../fonts/HelveticaNeue-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
-  font-family: "Manrope-Bold";
-  src: url("../fonts/Manrope-Bold.woff2") format("woff2"), url("../fonts/Manrope-Bold.woff") format("woff"), url("../fonts/Manrope-Bold.ttf") format("truetype");
+  font-family: "HelveticaNeue-Regular";
+  src: url("../fonts/HelveticaNeue-Regular.woff2") format("woff2"), url("../fonts/HelveticaNeue-Regular.woff") format("woff"), url("../fonts/HelveticaNeue-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "RobotoSlab-Regular";
+  src: url("../fonts/RobotoSlab-Regular.woff2") format("woff2"), url("../fonts/RobotoSlab-Regular.woff") format("woff"), url("../fonts/RobotoSlab-Regular.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: "RobotoSlab-Bold";
+  src: url("../fonts/RobotoSlab-Bold.woff2") format("woff2"), url("../fonts/RobotoSlab-Bold.woff") format("woff"), url("../fonts/RobotoSlab-Bold.ttf") format("truetype");
   font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Manrope-Medium";
-  src: url("../../fonts/Manrope-Medium.woff2") format("woff2"), url("../../fonts/Manrope-Medium.woff") format("woff"), url("../../fonts/Manrope-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Manrope-Regular";
-  src: url("../fonts/Manrope-Regular.woff2") format("woff2"), url("../fonts/Manrope-Regular.woff") format("woff"), url("../fonts/Manrope-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Ubuntu-Medium";
-  src: url("../fonts/Ubuntu-Medium.woff2") format("woff2"), url("../fonts/Ubuntu-Medium.woff") format("woff"), url("../fonts/Ubuntu-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto-Regular";
-  src: url("../fonts/Roboto-Regular.woff2") format("woff2"), url("../fonts/Roboto-Regular.woff") format("woff"), url("../fontsRoboto-Regular.ttf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto-Black";
-  src: url("../fonts/Roboto-Black.woff2") format("woff2"), url("../fonts/Roboto-Black.woff") format("woff"), url("../fonts/Roboto-Black.ttf") format("truetype");
-  font-weight: 900;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto-Medium";
-  src: url("../fonts/Roboto-Medium.woff2") format("woff2"), url("../fonts/Roboto-Medium.woff") format("woff"), url("../fonts/Roboto-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Roboto-Bold";
-  src: url("../fonts/Roboto-Bold.woff2") format("woff2"), url("../fonts/Roboto-Bold.woff") format("woff"), url("../fonts/Roboto-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-  font-display: swap;
-}
-@font-face {
-  font-family: "Ubuntu-Regular";
-  src: url("../fonts/Ubuntu-Regular.woff2") format("woff2"), url("../fonts/Ubuntu-Regular.woff") format("woff"), url("../fonts/Ubuntu-Regular.ttf") format("truetype");
-  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
@@ -111,10 +69,9 @@ html {
 }
 
 body {
-  font-family: "Manrope-Regular", sans-serif;
-  font-size: 16px;
+  font-family: "HelveticaNeue-Regular", sans-serif;
+  font-size: 14px;
   font-weight: 400;
-  line-height: 22px;
   color: #332a33;
 }
 
@@ -124,8 +81,9 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Manrope-Medium";
-  font-weight: 500;
+  font-family: "RobotoSlab-Regular", sans-serif;
+  font-weight: 400;
+  font-size: 42;
 }
 
 a {
@@ -173,6 +131,9 @@ button {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
+  font-family: "HelveticaNeue-Bold", sans-serif;
+  font-size: 15px;
+  font-weight: 700;
 }
 
 input,
@@ -223,6 +184,9 @@ textarea {
 
 .btn-link {
   border-radius: 5px;
+  font-family: "HelveticaNeue-Bold", sans-serif;
+  font-weight: 700;
+  font-size: 15px;
 }
 .btn-link_pink {
   background-color: #e04eb3;
@@ -315,6 +279,8 @@ textarea {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  font-family: "RobotoSlab-Regular", sans-serif;
+  font-size: 14px;
 }
 .menu__item {
   height: 100%;
@@ -378,6 +344,8 @@ textarea {
 
 .intro__text {
   margin-bottom: 50px;
+  font-family: "RobotoSlab-Regular", sans-serif;
+  font-size: 14px;
 }
 
 .intro__block {
@@ -400,6 +368,8 @@ textarea {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   position: relative;
+  -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
+          box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
 }
 .services__item::after {
   opacity: 0;
@@ -436,8 +406,16 @@ textarea {
   background-color: #f2f2f2;
 }
 
+.service-title {
+  font-family: "HelveticaNeue-Regular", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+}
+
 .service-price {
+  font-family: "HelveticaNeue-Bold", sans-serif;
   font-weight: 700;
+  font-size: 16px;
 }
 
 .separator {
@@ -550,6 +528,11 @@ textarea {
   gap: 10px;
   justify-items: center;
 }
+.review__title {
+  font-family: "HelveticaNeue-Regular", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+}
 
 .reviews-pic {
   background-color: #e04eb3;
@@ -565,7 +548,6 @@ textarea {
   font-style: italic;
   font-weight: 300;
   margin-bottom: 10px;
-  margin-top: -25px;
   font-size: 14px;
 }
 
@@ -597,8 +579,8 @@ textarea {
 }
 .footer__inner {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 50px;
 }
 .footer__block {
   display: -webkit-box;
@@ -612,6 +594,9 @@ textarea {
 .footer__title {
   margin-bottom: 30px;
   color: #fff;
+  font-family: "RobotoSlab-Bold", sans-serif;
+  font-weight: 700;
+  font-size: 20px;
 }
 .footer__title_logo {
   text-transform: uppercase;
@@ -680,71 +665,6 @@ textarea {
   height: 26px;
 }
 
-.book__lbl {
-  position: relative;
-  width: 100%;
-  color: #332a33;
-  font-size: 20px;
-}
-.book__lbl_textarea {
-  margin-bottom: 30px;
-}
-.book__input {
-  width: 100%;
-  color: inherit;
-  margin-bottom: 5px;
-  border-radius: 5px;
-  font-size: inherit;
-}
-.book__span {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 5px;
-  height: 5px;
-  font-size: 20px;
-  color: #e04eb3;
-}
-.book__textarea {
-  color: inherit;
-  width: 100%;
-  height: 100%;
-  border-radius: 5px;
-  font-size: inherit;
-  font-family: inherit;
-}
-.book__btn {
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  background-color: #e04eb3;
-  border-radius: 5px;
-  padding: 15px 30px;
-  text-transform: uppercase;
-  color: #fff;
-  position: relative;
-}
-.book__btn::after {
-  opacity: 0;
-  display: block;
-  content: "";
-  width: calc(100% + 2px);
-  height: calc(100% + 2px);
-  position: absolute;
-  left: -1px;
-  top: -1px;
-  border: 3px solid black;
-  border-radius: 5px;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-.book__btn:hover {
-  color: black;
-  background-color: #fff;
-}
-.book__btn:hover::after {
-  opacity: 1;
-}
-
 .slider-intro,
 .slider-modal {
   overflow: hidden;
@@ -760,7 +680,7 @@ textarea {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover; /* Обеспечивает корректное обрезание изображений */
+     object-fit: cover;
 }
 
 .slider-modal .slider__img {
@@ -775,12 +695,11 @@ textarea {
   -webkit-transform: translate(-50%, -50%);
       -ms-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  color: #800080;
 }
 
 .slick-arrow {
-  width: 100px;
-  height: 100px;
+  width: 60px;
+  height: 60px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -810,10 +729,10 @@ textarea {
   content: "";
   background: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 31 55.75"%3E%3Cpath fill="white" d="M3.11 55.75c0,0 -0.01,0 -0.01,0 -0.82,0 -1.6,-0.32 -2.18,-0.9 -0.59,-0.58 -0.92,-1.37 -0.92,-2.2 0,-0.82 0.33,-1.61 0.92,-2.2l22.6 -22.57 -22.6 -22.57c-0.59,-0.58 -0.91,-1.38 -0.91,-2.2 0,-1.72 1.39,-3.11 3.11,-3.11 0.82,0 1.61,0.33 2.19,0.91l24.78 24.77c0.58,0.58 0.91,1.38 0.91,2.2 0,0.83 -0.33,1.62 -0.92,2.2l-24.77 24.77c-0.58,0.58 -1.36,0.9 -2.18,0.9 0,0 -0.01,0 -0.01,0l-0.01 0z" /%3E%3C/svg%3E') no-repeat center;
   position: absolute;
-  left: 23px;
+  left: 18px;
   display: block;
-  width: 60px;
-  height: 60px;
+  width: 30px;
+  height: 30px;
 }
 
 .slick-prev {
