--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,45 +1,49 @@
-.page_gallery{
-background-color: $color-dark;
+.page_gallery {
+	background-color: $color-dark;
 }
 
-.container{
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
+.container {
+	max-width: 1200px;
+	width: 100%;
+	margin: 0 auto;
 
-  padding: 0px 30px;
+	padding: 0px 30px;
 }
 
-.btn-link{
-    border-radius: 5px;
+.btn-link {
+	border-radius: 5px;
+	font-family: "HelveticaNeue-Bold", sans-serif;
+	font-weight: 700;
+  font-size: 15px;
 
-    &_pink {
-      background-color: $color-pink;
-      border-radius: 5px;
-      padding: 15px 30px;
-      text-transform: uppercase;
-      color: #fff;
+	&_pink {
+		background-color: $color-pink;
+		border-radius: 5px;
+		padding: 15px 30px;
+		text-transform: uppercase;
+		color: #fff;
 
-      .btn-pink:hover{
-        color: black;
-        background-color: $color-white;
-        border: 2px solid black;
-      }
+		.btn-pink:hover {
+			color: black;
+			background-color: $color-white;
+			border: 2px solid black;
+		}
 
-      &:hover {
-        color: black;
-        background-color: $color-white;
-      }
-    }
+		&:hover {
+			color: black;
+			background-color: $color-white;
+		}
+	}
 }
 
 .no-scroll {
-  overflow: hidden; /* Отключает прокрутку страницы */
-  height: 100%; /* Устанавливает высоту в 100%, чтобы предотвратить увеличение высоты */
+	overflow: hidden; /* Отключает прокрутку страницы */
+	height: 100%; /* Устанавливает высоту в 100%, чтобы предотвратить увеличение высоты */
 }
 
-.title{
-		text-align: center;
-		margin-bottom: 30px;
+.title {
+	text-align: center;
+	margin-bottom: 30px;
 }
+
 
