--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -40,6 +40,9 @@
 	display: flex;
 
 	justify-content: flex-end;
+	font-family: 'RobotoSlab-Regular', sans-serif;
+	font-size: 14px;
+
 
 	&__item {
 		height: 100%;
