--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -10,6 +10,8 @@
 	background-color: $color-dark;
 	color: $color-white;
 
+
+
 	&__container {
 		max-width: 1000px;
 		width: 100%;
@@ -27,9 +29,12 @@
 
 .intro__text {
 	margin-bottom: 50px;
+	font-family: 'RobotoSlab-Regular',sans-serif;
+	font-size: 14px;
 }
 
 .intro__block {
 	background-color: $color-grey;
 	position: relative;
 }
+
