--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -23,10 +23,9 @@ html {
   }
 
 body {
-	font-family: "Manrope-Regular", sans-serif;
-	font-size: 16px;
+	font-family: 'HelveticaNeue-Regular', sans-serif;
+	font-size: 14px;
 	font-weight: 400;
-	line-height: 22px;
 	color: $color-dark;
 }
 
@@ -36,8 +35,9 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: "Manrope-Medium";
-	font-weight: 500;
+	font-family: 'RobotoSlab-Regular',sans-serif;
+	font-weight: 400;
+	font-size: 42;
 }
 
 a {
@@ -74,6 +74,9 @@ button{
 	border: none;
 	transition: .3s;
 	cursor: pointer;
+	font-family:'HelveticaNeue-Bold', sans-serif;
+	font-size: 15px;
+	font-weight: 700;
 }
 
 input,
