--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -3,7 +3,7 @@
         .reviews {
             padding-top: 70px;
         }
-  
+
         .reviews__block { display: grid;
             width: 100%;
             grid-template-columns: repeat(3, 1fr);
@@ -17,6 +17,12 @@
     grid-row: span 4;
     gap: 10px;
     justify-items: center;
+
+    &__title{
+        font-family: 'HelveticaNeue-Regular',sans-serif;
+        font-size: 20px;
+        font-weight: 400;
+    }
         }
         .reviews-pic {
             background-color: $color-pink;
@@ -28,11 +34,13 @@
 
         }
 
+
+
         .review__subtitle {
             font-style: italic;
             font-weight: 300;
             margin-bottom: 10px;
-            margin-top: -25px;
+            // margin-top: -25px;
             font-size: 14px;
         }
         .review__text {
