--- a/sass/_services.scss
+++ b/sass/_services.scss
@@ -14,6 +14,7 @@
 		background-color: $color-lightgrey;
 		transition: 0.3s;
 		position: relative;
+		box-shadow: 0 0 20px rgba(0, 0, 0, .08);
 
 		&::after {
 			opacity:0;
@@ -46,9 +47,12 @@
 	background-color: $color-grey;
 }
 .service-title {
+	font-family: 'HelveticaNeue-Regular',sans-serif;
+	font-size: 20px;
+	font-weight: 400;
 }
 .service-price {
+	font-family: 'HelveticaNeue-Bold',sans-serif;
 	font-weight: 700;
-}
-.service-text {
+	font-size: 16px;
 }
