--- a/css/main.css
+++ b/css/main.css
@@ -64,15 +64,12 @@
   clip: rect(0 0 0 0);
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 body {
   font-family: "HelveticaNeue-Regular", sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: #332a33;
+  line-height: 1.4;
 }
 
 h1,
@@ -83,7 +80,7 @@ h5,
 h6 {
   font-family: "RobotoSlab-Regular", sans-serif;
   font-weight: 400;
-  font-size: 42;
+  font-size: 42px;
 }
 
 a {
@@ -171,6 +168,39 @@ textarea {
   margin-bottom: 30px;
 }
 
+@-webkit-keyframes anim_pulse {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.1;
+  }
+}
+
+@keyframes anim_pulse {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.1;
+  }
+}
+@-webkit-keyframes anim_pulse_small {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.02;
+  }
+}
+@keyframes anim_pulse_small {
+  0% {
+    scale: 1;
+  }
+  100% {
+    scale: 1.02;
+  }
+}
 .page_gallery {
   background-color: #332a33;
 }
@@ -179,7 +209,7 @@ textarea {
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
-  padding: 0px 30px;
+  padding: 50px 30px;
 }
 
 .btn-link {
@@ -188,21 +218,38 @@ textarea {
   font-weight: 700;
   font-size: 15px;
 }
-.btn-link_pink {
+.btn-link:focus {
+  -webkit-animation: anim_pulse_small 0.5s infinite both alternate ease-in-out;
+          animation: anim_pulse_small 0.5s infinite both alternate ease-in-out;
+  outline: none;
+}
+.btn-link_dark {
+  background-color: #000;
+  padding: 15px 30px;
+  font-size: 16px;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
+.btn-link_dark:hover, .btn-link_dark:focus {
+  background-color: #fff;
+  color: #000;
+}
+.btn-link_pink-hover-light, .btn-link_pink-hover-dark {
   background-color: #e04eb3;
   border-radius: 5px;
   padding: 15px 30px;
   text-transform: uppercase;
+  color: #332a33;
+  display: inline-block;
+  text-align: center;
+}
+.btn-link_pink-hover-light:hover, .btn-link_pink-hover-light:focus, .btn-link_pink-hover-dark:hover, .btn-link_pink-hover-dark:focus {
+  color: #332a33;
+  background-color: #fff;
+}
+.btn-link_pink-hover-dark:hover, .btn-link_pink-hover-dark:focus {
+  background-color: #332a33;
   color: #fff;
-}
-.btn-link_pink .btn-pink:hover {
-  color: black;
-  background-color: #fff;
-  border: 2px solid black;
-}
-.btn-link_pink:hover {
-  color: black;
-  background-color: #fff;
 }
 
 .no-scroll {
@@ -215,8 +262,101 @@ textarea {
   margin-bottom: 30px;
 }
 
+/* ============================= */
+/* Media */
+@media (max-width: 1200px) {
+  .container {
+    max-width: 1000px;
+  }
+}
+@media (max-width: 990px) {
+  .container {
+    max-width: 700px;
+  }
+}
+@media (max-width: 500px) {
+  .btn-link_pink {
+    -ms-flex-item-align: center;
+        align-self: center;
+  }
+}
+.btn-menu {
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 30px;
+  height: 25px;
+  position: relative;
+  z-index: 2;
+  display: none;
+  background-color: transparent;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+}
+.btn-menu:focus {
+  -webkit-animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+          animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+  outline: none;
+}
+.btn-menu__line {
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 1px;
+  position: absolute;
+  margin: auto;
+  background-color: #e04eb3;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+.btn-menu::before, .btn-menu::after {
+  position: absolute;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  top: 0px;
+  background-color: #e04eb3;
+  border-radius: 1px;
+  -webkit-transition: -webkit-transform 0.2s linear;
+  transition: -webkit-transform 0.2s linear;
+  transition: transform 0.2s linear;
+  transition: transform 0.2s linear, -webkit-transform 0.2s linear;
+}
+.btn-menu::after {
+  top: auto;
+  bottom: 0px;
+}
+.btn-menu.active .btn-menu__line {
+  opacity: 0;
+}
+.btn-menu.active::before {
+  -webkit-transform: translateY(10px) rotate(45deg);
+      -ms-transform: translateY(10px) rotate(45deg);
+          transform: translateY(10px) rotate(45deg);
+}
+.btn-menu.active::after {
+  -webkit-transform: translateY(-11px) rotate(-45deg);
+      -ms-transform: translateY(-11px) rotate(-45deg);
+          transform: translateY(-11px) rotate(-45deg);
+}
+
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .btn-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 .header {
   position: fixed;
+  height: 87px;
   top: 0;
   left: 0;
   z-index: 1000;
@@ -230,12 +370,13 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 40px;
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
           box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
   background-color: #fff;
 }
 .header__inner {
+  padding-top: 0;
+  padding-bottom: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -245,11 +386,11 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  gap: 40px;
 }
 
 .header__logo {
-  height: 50px;
-  width: 300px;
+  padding: 5px 50px;
   background-color: #e04eb3;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -297,11 +438,12 @@ textarea {
   position: relative;
   z-index: 1;
 }
-.menu__link:hover {
+.menu__link:hover, .menu__link:focus {
   background-color: #fafafa;
   color: #e04eb3;
+  outline: none;
 }
-.menu__link:hover::before {
+.menu__link:hover::before, .menu__link:focus::before {
   background-color: #fafafa;
   scale: 1.05;
 }
@@ -317,15 +459,72 @@ textarea {
   transition: 0.3s;
 }
 
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .header__inner {
+    max-width: 100%;
+  }
+  .nav {
+    position: fixed;
+    bottom: 100%;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: rgba(255, 255, 255, 0.95);
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  .nav .menu__link {
+    padding: 20px 50px;
+  }
+  .nav .menu {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .nav.open {
+    translate: 0 calc(100% + 87px);
+  }
+  .nav.open .menu__link:hover, .nav.open .menu__link:focus {
+    background-color: inherit;
+  }
+  .nav.open .menu__link:hover::before, .nav.open .menu__link:focus::before {
+    background-color: inherit;
+    scale: 0;
+  }
+}
+@media (max-width: 990px) {
+  .header__inner {
+    gap: 20px;
+  }
+  .header__logo {
+    padding: 5px 20px;
+    font-size: 25px;
+  }
+}
 .intro {
-  padding-top: 50px;
+  padding-top: 87px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   min-height: 622px;
 }
 
 .intro__content {
-  padding: 75px 150px;
+  padding: 75px 100px;
   background-color: #332a33;
   color: #fff;
 }
@@ -333,6 +532,16 @@ textarea {
   max-width: 1000px;
   width: 100%;
   margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 
 .intro__title {
@@ -353,9 +562,21 @@ textarea {
   position: relative;
 }
 
-.services {
-  padding-top: 70px;
-  padding-bottom: 50px;
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .intro {
+    grid-template-columns: auto;
+    grid-template-rows: 622px auto;
+  }
+  .intro__content {
+    padding: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .intro__content {
+    padding: 50px;
+  }
 }
 .services__content {
   display: grid;
@@ -418,6 +639,14 @@ textarea {
   font-size: 16px;
 }
 
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .services__content {
+    grid-template-columns: auto;
+    gap: 30px;
+  }
+}
 .separator {
   background-color: #e04eb3;
   color: #fff;
@@ -442,22 +671,26 @@ textarea {
   font-size: 36px;
 }
 
-.separator__btn {
-  background-color: #000;
-  border-radius: 5px;
-  padding: 15px 30px;
-  font-size: 16px;
-  text-transform: uppercase;
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .separator__inner {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .separator__title {
+    width: 100%;
+    text-align: center;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+  }
 }
-.separator__btn:hover {
-  background-color: #fff;
-  color: #000;
-}
-
 .gallery {
-  padding-top: 50px;
   background-color: #fafafa;
-  padding-bottom: 50px;
 }
 .gallery_page {
   background-color: transparent;
@@ -498,16 +731,17 @@ textarea {
           box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
 }
 
-.gallery__link {
-  color: #332a33;
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  #photo {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    margin-bottom: 30px;
+  }
 }
-.gallery__link:hover {
-  background-color: #332a33;
-  color: #fff;
-}
-
 .reviews {
-  padding-top: 70px;
+  margin-bottom: 20px;
 }
 
 .reviews__block {
@@ -517,15 +751,14 @@ textarea {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 50px;
+  gap: 0 50px;
+  padding-top: 30px;
 }
 
 .review {
-  margin-bottom: 80px;
   display: grid;
   grid-template-rows: subgrid;
-  grid-row: span 4;
-  gap: 10px;
+  grid-row: span 3;
   justify-items: center;
 }
 .review__title {
@@ -541,14 +774,18 @@ textarea {
   height: 100px;
   -o-object-fit: cover;
      object-fit: cover;
-  margin-top: 30px;
+}
+
+.review__titles {
+  text-align: center;
+  padding: 10px 0 30px;
 }
 
 .review__subtitle {
   font-style: italic;
   font-weight: 300;
-  margin-bottom: 10px;
-  font-size: 14px;
+  font-size: 12px;
+  color: #9e929e;
 }
 
 .review__text {
@@ -571,9 +808,31 @@ textarea {
           transform: translateX(-50%) rotate(45deg);
 }
 
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .reviews__block {
+    grid-template-columns: auto;
+    gap: 20px;
+  }
+  .review {
+    grid-template-rows: auto;
+  }
+  .review__text {
+    padding: 40px 75px;
+  }
+  .reviews-pic {
+    margin-top: 0px;
+  }
+}
+@media (max-width: 500px) {
+  .review__text {
+    padding: 50px;
+  }
+}
 .footer {
-  padding-top: 70px;
-  padding-bottom: 70px;
+  padding-top: 55px;
+  padding-bottom: 55px;
   color: #9e929e;
   background-image: url("../images/bg-polygonal.jpg");
 }
@@ -624,6 +883,14 @@ textarea {
           align-items: center;
   gap: 10px;
 }
+.contacts__link:hover, .contacts__link:focus {
+  color: #fff;
+  outline: none;
+}
+.contacts__link:focus .contacts__icon {
+  -webkit-animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+          animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+}
 .contacts__icon {
   width: 20px;
   height: 20px;
@@ -639,14 +906,6 @@ textarea {
   grid-template-rows: 40px;
   grid-template-columns: repeat(4, 40px);
 }
-.social__item {
-  border: #9e929e 2px solid;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
-.social__item .fill-color {
-  fill: #9e929e;
-}
 .social__link {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -659,31 +918,49 @@ textarea {
           justify-content: center;
   width: 100%;
   height: 100%;
+  border: #9e929e 2px solid;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+.social__link:focus {
+  outline: none;
+  -webkit-animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+          animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+}
+.social__link .fill-color {
+  fill: #9e929e;
 }
 .social__icon {
   width: 26px;
   height: 26px;
 }
 
+/* ============================= */
+/* media */
+@media (max-width: 990px) {
+  .footer__inner {
+    grid-template-columns: auto;
+  }
+}
 .slider-intro,
 .slider-modal {
   overflow: hidden;
 }
 
-.slider__item,
+.slider-item,
 .slick-list,
 .slick-track {
   height: 100%;
 }
 
-.slider-intro .slider__img {
+.slider-intro .slider-img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
-.slider-modal .slider__img {
+.slider-modal .slider-img {
   max-width: 100%;
   max-height: 100%;
   -o-object-fit: contain;
@@ -718,11 +995,14 @@ textarea {
   scale: 0.95;
 }
 .slick-arrow:hover, .slick-arrow:focus {
-  background-color: rgba(158, 146, 158, 0.7);
+  background-color: #e04eb3;
 }
 
 .slider-modal .slick-arrow {
   background-color: rgba(158, 146, 158, 0.1);
+}
+.slider-modal .slick-arrow:hover, .slider-modal .slick-arrow:focus {
+  background-color: #e04eb3;
 }
 
 .slick-arrow::before {
