--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
-	padding-top: 70px;
-	padding-bottom: 70px;
+	padding-top: 55px;
+	padding-bottom: 55px;
 	color: $color-darkgrey;
 
 	background-image: url("../images/bg-polygonal.jpg");
@@ -18,7 +18,7 @@
 		margin-bottom: 30px;
 		color: #fff;
 
-		font-family: 'RobotoSlab-Bold',sans-serif;
+		font-family: "RobotoSlab-Bold", sans-serif;
 		font-weight: 700;
 		font-size: 20px;
 
@@ -44,6 +44,16 @@
 		display: flex;
 		align-items: center;
 		gap: 10px;
+
+		&:hover,
+		&:focus {
+			color: $color-white;
+			outline: none;
+		}
+
+		&:focus .contacts__icon {
+			animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+		}
 	}
 
 	&__icon {
@@ -63,19 +73,25 @@
 	grid-template-rows: 40px;
 	grid-template-columns: repeat(4, 40px);
 
-	&__item {
-		border: $color-darkgrey 2px solid;
-transition: .3s;
-		& .fill-color {
-			fill: $color-darkgrey;
-		}
-	}
 	&__link {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 		width: 100%;
 		height: 100%;
+
+		border: $color-darkgrey 2px solid;
+		transition: 0.3s;
+
+		&:focus {
+			outline: none;
+
+			animation: anim_pulse 0.5s infinite both alternate ease-in-out;
+		}
+
+		& .fill-color {
+			fill: $color-darkgrey;
+		}
 	}
 
 	&__icon {
@@ -153,3 +169,12 @@ transition: .3s;
 // 		}
 // 	}
 // }
+
+/* ============================= */
+/* media */
+
+@media (max-width: 990px) {
+	.footer__inner {
+		grid-template-columns: auto;
+	}
+}
