--- a/sass/_gallery.scss
+++ b/sass/_gallery.scss
@@ -1,7 +1,5 @@
 .gallery {
-	padding-top: 50px;
 	background-color: $color-lightgrey;
-	padding-bottom: 50px;
 
 	&_page {
 		background-color: transparent;
@@ -35,11 +33,17 @@
 	}
 }
 
-.gallery__link {
-	color: $color-dark;
 
-	&:hover {
-		background-color: $color-dark;
-		color: #fff;
+
+/* ============================= */
+/* media */
+
+@media (max-width: 990px) {
+	#photo {
+		grid-template-columns: repeat(2, 1fr);
+		gap: 10px;
+		margin-bottom: 30px;
 	}
+
+
 }
