--- a/sass/_reviews.scss
+++ b/sass/_reviews.scss
@@ -1,63 +1,97 @@
+.reviews {
+	margin-bottom: 20px;
+}
+
+.reviews__block {
+	display: grid;
+	width: 100%;
+	grid-template-columns: repeat(3, 1fr);
+	justify-content: space-between;
+	gap: 0 50px;
+    padding-top: 30px;
+
+}
+.review {
+	display: grid;
+	grid-template-rows: subgrid;
+	grid-row: span 3;
+	justify-items: center;
+
+	&__title {
+		font-family: "HelveticaNeue-Regular", sans-serif;
+		font-size: 20px;
+		font-weight: 400;
+	}
+}
+.reviews-pic {
+	background-color: $color-pink;
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
+	object-fit: cover;
+}
+
+.review__titles{
+text-align: center;
+padding: 10px 0 30px;
+}
+
+.review__subtitle {
+	font-style: italic;
+	font-weight: 300;
+	font-size: 12px;
+    color: $color-darkgrey;
+}
+.review__text {
+	background-color: $color-grey;
+	padding: 20px;
+	text-align: center;
+	position: relative;
+
+	&::after {
+		content: "";
+		display: block;
+		position: absolute;
+		width: 30px;
+		height: 30px;
+		top: -12px;
+		left: 50%;
+		background-color: inherit;
+		transform: translateX(-50%) rotate(45deg);
+	}
+}
+
+/* ============================= */
+/* media */
+
+@media (max-width: 990px) {
+	.reviews__block {
+		grid-template-columns: auto;
+gap: 20px;
+	}
+
+	.review {
+		grid-template-rows: auto;
+	}
 
 
-        .reviews {
-            padding-top: 70px;
-        }
+    .review__subtitle{
 
-        .reviews__block { display: grid;
-            width: 100%;
-            grid-template-columns: repeat(3, 1fr);
-            justify-content: space-between;
-            gap: 50px;
-        }
-        .review {
-            margin-bottom: 80px;
-            display: grid;
-            grid-template-rows: subgrid;
-    grid-row: span 4;
-    gap: 10px;
-    justify-items: center;
-
-    &__title{
-        font-family: 'HelveticaNeue-Regular',sans-serif;
-        font-size: 20px;
-        font-weight: 400;
     }
-        }
-        .reviews-pic {
-            background-color: $color-pink;
-            border-radius: 50%;
-            width: 100px;
-            height: 100px;
-            object-fit: cover;
-            margin-top: 30px;
 
-        }
+	.review__text {
+		padding: 40px 75px;
+	}
 
+    .reviews-pic {
 
+        margin-top: 0px;
+    }
+}
 
-        .review__subtitle {
-            font-style: italic;
-            font-weight: 300;
-            margin-bottom: 10px;
-            // margin-top: -25px;
-            font-size: 14px;
-        }
-        .review__text {
-            background-color: $color-grey;
-            padding: 20px;
-            text-align: center;
-            position: relative;
+@media (max-width:500px) {
+	.review__text {
 
-            &::after{
-                content: '';
-                display: block;
-                position: absolute;
-                width: 30px;
-                height: 30px;
-                top: -12px;
-                left: 50%;
-                background-color: inherit;
-                transform: translateX(-50%) rotate(45deg);
-            }
-        }
+			padding: 50px;
+	}
+}
