--- a/sass/_slider.scss
+++ b/sass/_slider.scss
@@ -3,19 +3,19 @@
 	overflow: hidden;
 }
 
-.slider__item,
+.slider-item,
 .slick-list,
 .slick-track {
 	height: 100%;
 }
 
-.slider-intro .slider__img {
+.slider-intro .slider-img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
 }
 
-.slider-modal .slider__img {
+.slider-modal .slider-img {
 	max-width: 100%;
 	max-height: 100%;
 	object-fit: contain;
@@ -44,12 +44,17 @@
 
 	&:hover,
 	&:focus {
-		background-color: rgba($color: $color-darkgrey, $alpha: 0.7);
+		background-color: $color-pink;
 	}
 }
 
 .slider-modal .slick-arrow {
 	background-color: rgba($color: $color-darkgrey, $alpha: 0.1);
+
+	&:hover,
+	&:focus {
+		background-color: $color-pink;
+	}
 }
 
 .slick-arrow::before {
