--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,9 @@
 
 @import "page_gallery";
 
+@import "animation";
 @import "common";
+@import "btns";
 @import "header";
 @import "intro";
 @import "services";
