pink color change

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 .stroke-pink {
-  stroke: #e04eb3;
+  stroke: #8164c0;
 }
 
 .fill-pink {
-  fill: #e04eb3;
+  fill: #8164c0;
 }
 
 .fill-color {
@@ -70,7 +70,6 @@ body {
   font-weight: 400;
   color: #332a33;
   line-height: 1.4;
-  background-color: #8164c0;
 }
 
 h1,
@@ -236,7 +235,7 @@ textarea {
   color: #000;
 }
 .btn-link_pink-hover-light, .btn-link_pink-hover-dark {
-  background-color: #e04eb3;
+  background-color: #8164c0;
   border-radius: 5px;
   padding: 15px 30px;
   text-transform: uppercase;
@@ -309,7 +308,7 @@ textarea {
   border-radius: 1px;
   position: absolute;
   margin: auto;
-  background-color: #e04eb3;
+  background-color: #8164c0;
   -webkit-transition: 0.2s linear;
   transition: 0.2s linear;
 }
@@ -321,7 +320,7 @@ textarea {
   height: 4px;
   left: 0;
   top: 0px;
-  background-color: #e04eb3;
+  background-color: #8164c0;
   border-radius: 1px;
   -webkit-transition: -webkit-transform 0.2s linear;
   transition: -webkit-transform 0.2s linear;
@@ -392,7 +391,7 @@ textarea {
 
 .header__logo {
   padding: 5px 50px;
-  background-color: #e04eb3;
+  background-color: #8164c0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -441,7 +440,7 @@ textarea {
 }
 .menu__link:hover, .menu__link:focus {
   background-color: #fafafa;
-  color: #e04eb3;
+  color: #8164c0;
   outline: none;
 }
 .menu__link:hover::before, .menu__link:focus::before {
@@ -549,7 +548,7 @@ textarea {
   margin-bottom: 35px;
 }
 .intro__title__span {
-  color: #e04eb3;
+  color: #8164c0;
 }
 
 .intro__text {
@@ -602,7 +601,7 @@ textarea {
   position: absolute;
   left: 0px;
   bottom: 0px;
-  background-color: #e04eb3;
+  background-color: #8164c0;
   -webkit-transition: 0.3s;
   transition: 0.3s;
 }
@@ -649,7 +648,7 @@ textarea {
   }
 }
 .separator {
-  background-color: #e04eb3;
+  background-color: #8164c0;
   color: #fff;
 }
 
@@ -769,7 +768,7 @@ textarea {
 }
 
 .reviews-pic {
-  background-color: #e04eb3;
+  background-color: #8164c0;
   border-radius: 50%;
   width: 100px;
   height: 100px;
@@ -996,14 +995,14 @@ textarea {
   scale: 0.95;
 }
 .slick-arrow:hover, .slick-arrow:focus {
-  background-color: #e04eb3;
+  background-color: #8164c0;
 }
 
 .slider-modal .slick-arrow {
   background-color: rgba(158, 146, 158, 0.1);
 }
 .slider-modal .slick-arrow:hover, .slider-modal .slick-arrow:focus {
-  background-color: #e04eb3;
+  background-color: #8164c0;
 }
 
 .slick-arrow::before {
