--- a/css/main.css
+++ b/css/main.css
@@ -373,6 +373,10 @@ textarea {
   -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
           box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
   background-color: #fff;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+  transition: transform 0.5s ease, -webkit-transform 0.5s ease; /* Плавный переход для трансформации */
 }
 .header__inner {
   padding-top: 0;
