--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -1,5 +1,5 @@
 .intro {
-	padding-top: 87px;
+	padding-top: $header-height;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	min-height: 622px;
@@ -10,15 +10,13 @@
 	background-color: $color-dark;
 	color: $color-white;
 
-
-
 	&__container {
 		max-width: 1000px;
 		width: 100%;
 		margin: 0 auto;
 		display: flex;
-	flex-direction: column;
-	align-items: start;
+		flex-direction: column;
+		align-items: start;
 	}
 }
 
@@ -32,7 +30,7 @@
 
 .intro__text {
 	margin-bottom: 50px;
-	font-family: 'RobotoSlab-Regular',sans-serif;
+	font-family: "RobotoSlab-Regular", sans-serif;
 	font-size: 14px;
 }
 
@@ -44,22 +42,34 @@
 /* ============================= */
 /* media */
 
-@media (max-width:990px) {
+@media (max-width: 990px) {
 	.intro {
-
 		grid-template-columns: auto;
 		grid-template-rows: 622px auto;
 
-		&__content{
+		&__content {
 			padding: 50px;
 		}
 	}
 }
 
-@media (max-width:500px) {
+@media (max-width: 500px) {
 	.intro {
-		&__content{
+		&__content {
 			padding: 50px;
 		}
+	}
+}
+
+@media (max-height: 830px) and (max-width: 990px) {
+	.intro {
+		grid-template-rows: calc(100vh - $header-height) auto;
+	}
+}
+
+@media (max-height: 370px) {
+	.intro {
+		padding-top: $header-height-min;
+		grid-template-rows: calc(100vh - $header-height-min) auto;
 	}
 }
