--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -1,27 +1,39 @@
-#modal-close {
+.elem-close {
 	display: flex;
 	position: fixed;
 	top: 20px;
 	right: 20px;
-	font-size: 35px;
-	width: 30px;
-	height: 30px;
+	width: 32px;
+	height: 32px;
 	cursor: pointer;
 	z-index: 1;
 	transition: 0.6s;
 	align-items: center;
 	justify-content: center;
-	padding: 5px;
 	border-radius: 50%;
-	background-color: #fff;
+	background-color: $color-pink;
 
 	&:hover {
 		transform: rotate(180deg);
 	}
 }
 
+.elem-close__cross {
+	width: 26px;
+	height: 26px;
+
+	&__line {
+		fill: none;
+		stroke: $color-white;
+		stroke-linecap: round;
+		stroke-linejoin: round;
+		stroke-width: 4px;
+	}
+}
+
 #modal-content {
-	max-width: 100%;
-	max-height: 100%;
+	flex:1;
+	width: 100%;
+	height: 100%;
 	background-color: transparent;
 }
