--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -18,9 +18,6 @@
 	clip: rect(0 0 0 0);
 }
 
-// html {
-// 	scroll-behavior: smooth;
-//   }
 
 body {
 	font-family: 'HelveticaNeue-Regular', sans-serif;
@@ -28,7 +25,7 @@ body {
 	font-weight: 400;
 	color: $color-dark;
 	line-height: 1.4;
-	
+
 }
 
 h1,
@@ -52,23 +49,23 @@ img {
 	vertical-align: top;
 }
 
+
 dialog[open] {
 	outline: none;
 	position: fixed;
-	inset: 0;
-	margin: auto;
-	border-radius: 7px;
+	width: 100%;
+	height: 100%;
+	max-width: 100%;
+	max-height: 100%;
 	border: none;
 	padding: 0;
-display: flex;
 background-color: transparent;
 
 
 	&::backdrop {
-		display: flex;
 		background-color: rgba(0, 0, 0, 0.9);
-		cursor: pointer;
-		overflow:hidden ;
+		// cursor: pointer;
+		// overflow:hidden ;
 	}
 }
 
