--- a/sass/_var.scss
+++ b/sass/_var.scss
@@ -5,3 +5,6 @@ $color-grey:#f2f2f2;
 $color-black: #000;
 $color-lightgrey: #fafafa;
 $color-darkgrey: #9e929e;
+
+$header-height: 87px;
+$header-height-min: 56px;
