--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,50 @@ textarea {
             transform: rotate(360deg);
   }
 }
+@-webkit-keyframes slide-out-blurred-left {
+  100% {
+    -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+            transform: translateX(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-out-blurred-left {
+  100% {
+    -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+            transform: translateX(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+@-webkit-keyframes slide-out-blurred-right {
+  100% {
+    -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+            transform: translateX(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-out-blurred-right {
+  100% {
+    -webkit-transform: translateX(0) scaleY(1) scaleX(1);
+            transform: translateX(0) scaleY(1) scaleX(1);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    -webkit-filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
 .page {
   margin: 0 auto;
   min-height: 100vh;
@@ -621,23 +665,6 @@ textarea {
   width: 100%;
   height: 100%;
 }
-.intro__list {
-  list-style: none;
-  margin-bottom: 10px;
-  font-family: "RobotoSlab-Regular", sans-serif;
-  font-size: 14px;
-}
-.intro__item {
-  position: relative;
-  padding-left: 20px;
-  margin: 5px 0;
-}
-.intro__item::before {
-  content: "📌";
-  position: absolute;
-  left: 0;
-  font-size: inherit;
-}
 .intro__text {
   font-family: "RobotoSlab-Regular", sans-serif;
   font-size: 14px;
@@ -798,6 +825,65 @@ textarea {
     gap: 30px;
   }
 }
+.how__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 50px;
+}
+.how__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 60px;
+}
+.how__item {
+  font-family: "RobotoSlab-Regular", sans-serif;
+  font-size: 16px;
+  padding: 20px;
+  background-color: #f3f0fb;
+  -webkit-box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 4px 4px 6px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 20px;
+}
+.how__item.left {
+  -webkit-transform: translateX(-500px) scaleX(2) scaleY(0.2);
+      -ms-transform: translateX(-500px) scaleX(2) scaleY(0.2);
+          transform: translateX(-500px) scaleX(2) scaleY(0.2);
+  -webkit-transform-origin: 100% 50%;
+      -ms-transform-origin: 100% 50%;
+          transform-origin: 100% 50%;
+  -webkit-filter: blur(40px);
+          filter: blur(40px);
+  opacity: 0;
+}
+.how__item.left.active {
+  -webkit-animation: slide-out-blurred-left 0.35s linear both;
+          animation: slide-out-blurred-left 0.35s linear both;
+}
+.how__item.right {
+  -webkit-transform: translateX(500px) scaleX(2) scaleY(0.2);
+      -ms-transform: translateX(500px) scaleX(2) scaleY(0.2);
+          transform: translateX(500px) scaleX(2) scaleY(0.2);
+  -webkit-transform-origin: 0% 50%;
+      -ms-transform-origin: 0% 50%;
+          transform-origin: 0% 50%;
+  -webkit-filter: blur(40px);
+          filter: blur(40px);
+  opacity: 0;
+}
+.how__item.right.active {
+  -webkit-animation: slide-out-blurred-right 0.35s linear both;
+          animation: slide-out-blurred-right 0.35s linear both;
+}
+
 .separator {
   background-color: #e04eb3;
   color: #fff;
