--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "header";
 @import "intro";
 @import "services";
+@import "how";
 @import "separator";
 @import "gallery";
 @import "reviews";
