--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -22,24 +22,32 @@
     }
 }
 
-@keyframes slide-out-blurred-left {
-	100% {
-		transform: translateX(0) scaleY(1) scaleX(1);
+// @keyframes slide-out-blurred-left {
+// 	100% {
+// 		transform: translateX(0) scaleY(1) scaleX(1);
 
-		transform-origin: 50% 50%;
-		filter: blur(0);
-		opacity: 1;
-	}
+// 		transform-origin: 50% 50%;
+// 		filter: blur(0);
+// 		opacity: 1;
+// 	}
 
-}
-@keyframes slide-out-blurred-right {
+// }
+// @keyframes slide-out-blurred-right {
 
+//     100% {
+//         transform: translateX(0) scaleY(1) scaleX(1);
+//         transform-origin: 50% 50%;
+//         filter: blur(0);
+//         opacity: 1;
+//     }
+
+// }
+
+@keyframes show-out {
     100% {
-        transform: translateX(0) scaleY(1) scaleX(1);
-        transform-origin: 50% 50%;
+        transform: translateX(0);
         filter: blur(0);
         opacity: 1;
     }
-
 }
 
