--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -1,7 +1,7 @@
 .page {
 	margin: 0 auto;
 	min-height: 100vh;
-	overflow: hidden;
+	// overflow: hidden;
 	background-color: rgba(142, 106, 214,.3);
 }
 
@@ -21,6 +21,8 @@
 .title {
 	text-align: center;
 	margin-bottom: 30px;
+
+
 }
 
 
