--- a/sass/_intro.scss
+++ b/sass/_intro.scss
@@ -2,7 +2,6 @@
 	padding-top: $header-height;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	// height: 622px;
 
 	&__block {
 		background-color: $color-grey;
@@ -13,28 +12,37 @@
 		height: 100%;
 	}
 
-	&__text {
+	&__title {
+		color: $color-white;
+	}
 
+	&__text {
 		font-family: "RobotoSlab-Regular", sans-serif;
 		font-size: 14px;
 		margin-bottom: 10px;
-			}
+		opacity: 0;
+		transform: translateX(100%);
+	}
 
-			&__title {
-				margin-bottom: 35px;
-				font-size: 35px;
-				text-transform: uppercase;
-				display: flex;
-				flex-direction: column;
-				&__span {
-					color: $color-pink;
-				}
+	&__title {
+		margin-bottom: 35px;
+		font-size: 35px;
+		text-transform: uppercase;
+		display: flex;
+		flex-direction: column;
+		opacity: 0;
+		transform: translateX(100%);
 
-			}
+		&__span {
+			color: $color-pink;
+		}
+	}
 
-			&__btn{
-				margin-top: 20px;
-			}
+	&__btn {
+		margin-top: 20px;
+		opacity: 0;
+		transform: translateX(100%);
+	}
 }
 
 .intro__content {
@@ -42,6 +50,7 @@
 	padding: 75px 100px;
 	background-color: $color-purple;
 	color: $color-white;
+	overflow: hidden;
 
 	&__container {
 		max-width: 1000px;
@@ -50,11 +59,11 @@
 		display: flex;
 		flex-direction: column;
 		align-items: start;
-		opacity: 0;
-		transform: translateX(100%);
 
-		&.active{
-			animation:show-out .6s linear both;
+		&.active .intro__title,
+		&.active .intro__text,
+		&.active .intro__btn {
+			animation: show-out 0.4s linear both;
 		}
 	}
 }
@@ -62,12 +71,6 @@
 .intro-left {
 	position: relative;
 }
-
-
-
-
-
-
 
 /* ============================= */
 /* media */
@@ -78,7 +81,16 @@
 		grid-template-rows: 622px auto;
 
 		&__content {
-			padding: 50px;
+			padding: 60px 50px;
+			min-height: auto;
+		}
+
+		&__title {
+			transform: translateX(-100%);
+		}
+
+		&.active .intro__title {
+			animation: show-out 0.4s linear both;
 		}
 	}
 }
